--- a/switch.yaml
+++ b/switch.yaml
@@ -1,77 +1,42 @@
 # Switches (mostly based on 433MHz/Pilight)
-- platform: tplink
-  host: 10.10.4.180
-#
 
-- platform: pilight
-  switches:
-
-    Desk Electronics:
-      on_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 3
-        'on': 1
-      off_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 3
-        'off': 1
-
-    Curtain Balls:
-      on_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 2
-        'on': 1
-      off_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 2
-        'off': 1
-
-    kitchen_stereo:
-      on_code:
-        protocol: brennenstuhl
-        systemcode: 30
-        unitcode: 4
-        'on': 1
-      off_code:
-        protocol: brennenstuhl
-        systemcode: 30
-        unitcode: 4
-        'off': 1
-
-    bedroom_stereo:
-      on_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 5
-        'on': 1
-      off_code:
-        protocol: brennenstuhl
-        systemcode: 31
-        unitcode: 5
-        'off': 1
-
-    Star Lights:
-      on_code:
-          protocol: kaku_switch
-          id: 64048982
-          unit: 15
-          'on': 1
-      off_code:
-          protocol: kaku_switch
-          id: 64048982
-          unit: 15
-          state: off
-          'off': 1
-
-- platform: flux
-  lights:
-    - light.trad_hall_back
-    - light.trad_hall_front
-  start_colortemp: 5500
-  name: 'Hallway_Fluxing'
-  mode: mired
+# - platform: pilight
+#   switches:
+# 
+#     Curtain Balls:
+#       on_code:
+#         protocol: brennenstuhl
+#         systemcode: 31
+#         unitcode: 2
+#         'on': 1
+#       off_code:
+#         protocol: brennenstuhl
+#         systemcode: 31
+#         unitcode: 2
+#         'off': 1
+# 
+#     kitchen_stereo:
+#       on_code:
+#         protocol: brennenstuhl
+#         systemcode: 30
+#         unitcode: 4
+#         'on': 1
+#       off_code:
+#         protocol: brennenstuhl
+#         systemcode: 30
+#         unitcode: 4
+#         'off': 1
+# 
+#     Star Lights:
+#       on_code:
+#           protocol: kaku_switch
+#           id: 64048982
+#           unit: 15
+#           'on': 1
+#       off_code:
+#           protocol: kaku_switch
+#           id: 64048982
+#           unit: 15
+#           state: off
+#           'off': 1
 
