--- a/configuration.yaml
+++ b/configuration.yaml
@@ -60,45 +60,7 @@ mqtt:
 
 
 # Tracking state changes over time, exclude some useless entities
-history:
-  exclude:
-    entities:
-      - sensor.time
-      - group.weather
-      - group.connectivity
-      - group.bathroom
-      - group.all_automations
-      - group.outside
-      - sensor.dark_sky_icon
-      - sensor.dark_sky_apparent_temperature
-      - sensor.dark_sky_dew_point
-      - sensor.dark_sky_precip
-      - sensor.dark_sky_precip_probability
-      - sensor.dark_sky_precip_intensity
-      - sensor.dark_sky_wind_speed
-      - sensor.dark_sky_wind_bearing
-      - sensor.dark_sky_pressure
-      - sensor.dark_sky_cloud_coverage
-      - switch.hallway_fluxing
-      - light.huekueche
-      - light.hueflur
-      - light.huearbeitszimmer
-      - light.hueaquarium
-      - light.cesstisch
-      - light.bcouchtisch
-      - light.aalle_lampen
-      - light.dwohnzimmer
-
-    domains:
-      - input_select
-      - automation
-      - updater
-      - http
-      - persistent_notification
-      - script
-      - group
-      - scene
-
+history: !include history.yaml
 
 # Record all data in external database (currently MariaDB)
 recorder:
@@ -131,18 +93,6 @@ sun:
 tradfri:
   host: 10.10.4.36
 
-# alexa:
-
-# Device tracking
-device_tracker:
-  - platform: unifi
-    host: 10.10.9.8
-    site_id: default
-    username: !secret unifi_username
-    password: !secret unifi_password
-    track_new_devices: false
-    verify_ssl: false
-
 ios:
   push:
     categories:
@@ -163,4 +113,7 @@ sensor: !include sensor.yaml
 script: !include_dir_named script
 intent_script: !include alexa_intents.yaml
 automation: !include automations.yaml
+
+# Discover some devices automatically (normally disabled)
+# discovery:
 
