--- a/sensor.yaml
+++ b/sensor.yaml
@@ -2,6 +2,8 @@
 
   - platform: darksky
     api_key: !secret darksky_api_key
+    update_interval: 
+      minutes: 15
     monitored_conditions:
       - summary
       - icon
